---------------------------------------------------------------------------
Version 3.18.3 (rgerhards), 2008-08-??
- enhanced ommysql to support custom port to connect to server
  Port can be set via new $ActionOmmysqlServerPort config directive
  Note: this was a very minor change and thus deemed appropriate to be
  done in the stable release.
- bugfix: misspelled config directive, previously was
  $MainMsgQueueWorkeTimeoutrThreadShutdown, is now
  $MainMsgQueueWorkerTimeoutThreadShutdown. Note that the misspelled
  directive is not preserved - if the misspelled directive was used
  (which I consider highly unlikely), the config file must be changed.
  Thanks to lperr for reporting the bug.
- disabled flow control for imuxsock, as it could cause system hangs
  under some circumstances. The devel (3.21.3 and above) will
  re-enable it and provide enhanced configurability to overcome the
  problems if they occur.
---------------------------------------------------------------------------
Version 3.18.2 (rgerhards), 2008-08-08
- merged in IPv6 forwarding address bugfix from v2-stable
---------------------------------------------------------------------------
Version 3.18.1 (rgerhards), 2008-07-21
- bugfix: potential segfault in creating message mutex in non-direct queue
  mode. rsyslogd segfaults on freeeBSD 7.0 (an potentially other platforms)
  if an action queue is running in any other mode than non-direct. The
  same problem can potentially be triggered by some main message queue
  settings. In any case, it will manifest during rsylog's startup. It is
  unlikely to happen after a successful startup (the only window of
  exposure may be a relatively seldom executed action running in queued
  mode). This has been corrected. Thank to HKS for point out the problem.
- bugfix: priority was incorrectly calculated on FreeBSD 7,
  because the LOG_MAKEPRI() C macro has a different meaning there (it
  is just a simple addition of faciltity and severity). I have changed